# ros2_challenge

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/senai_ros2/lib/senai_ros2/: cropper  receiver
ros2_ws/install/senai_ros2/share/senai_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml
ros2_ws/install/senai_ros2/share/senai_ros2/cmake/: senai_ros2Config-version.cmake  senai_ros2Config.cmake
ros2_ws/install/senai_ros2/share/senai_ros2/config/: my_config_file.yaml
ros2_ws/install/senai_ros2/share/senai_ros2/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/senai_ros2/share/senai_ros2/launch/: challenge_launcher.py
ros2_ws/install/sensor_interface/share/sensor_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/sensor_interface/share/sensor_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  (+6 more)
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/senai_ros2/: CMakeLists.txt  package.xml  save.cpp
ros2_ws/src/senai_ros2/config/: my_config_file.yaml
ros2_ws/src/senai_ros2/include/senai_ros2/: image_cropper.hpp  image_receiver.hpp
ros2_ws/src/senai_ros2/src/: image_cropper.cpp  image_receiver.cpp
ros2_ws/src/sensor_interface/: CMakeLists.txt
ros2_ws/src/sensor_interface/msg/: Nums.msg
(+155 files in other folders)
